# dbos-demo-apps

rust/durare-starter/: Cargo.toml  README.md
rust/durare-starter/html/: app.html
rust/durare-starter/src/: main.rs
rust/durare-toolbox/: Cargo.toml  README.md
rust/durare-toolbox/src/: main.rs
rust/protobuf-serializer/: Cargo.toml  README.md
rust/protobuf-serializer/src/: main.rs  proto_serializer.rs  task.rs
rust/widget-store/: Cargo.toml  README.md
rust/widget-store/src/: handlers.rs  main.rs  models.rs  store.rs  workflows.rs
