[package]
name = "durare-starter"
version = "0.1.0"
edition = "2021"
publish = false
description = "A DBOS starter app on the durare durable-execution SDK for Rust."

[dependencies]
# The durable-execution SDK, from crates.io. `admin` enables the DBOS admin
# HTTP server; the Postgres backend is on by default.
durare = { version = "0.3", features = ["admin"] }

axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
