[package]
name = "protobuf-serializer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Serializer::custom / SerializerCodec need 0.3.x.
durare = "0.3.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The wire format: rows are stored as google.protobuf.Value messages.
prost = "0.13"
prost-types = "0.13"
base64 = "0.22"
