[package]
name = "widget-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# recover_on_launch needs 0.3.2.
durare = { version = "0.3.2", features = ["admin"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pool for the app's own tables (products/orders) — the DBOS system schema is
# managed by durare's provider on the same database.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
